--- a/more-qa.html
+++ b/more-qa.html
@@ -352,6 +352,7 @@
 
 <script>
 $(document).ready(function(){
+	console.log(123)
 	var scrollTop ;
 	var storeObject = new Object();
 	var transLocalStorage = localStorage.getItem("transLink")!=null? JSON.parse(localStorage.getItem("transLink")):null;
