--- a/more-qa.html
+++ b/more-qa.html
@@ -353,6 +353,7 @@
 <script>
 $(document).ready(function(){
 	console.log(123)
+	console.log('testBranch')
 	var scrollTop ;
 	var storeObject = new Object();
 	var transLocalStorage = localStorage.getItem("transLink")!=null? JSON.parse(localStorage.getItem("transLink")):null;
