--- a/more-qa.html
+++ b/more-qa.html
@@ -354,6 +354,8 @@
 $(document).ready(function(){
 	console.log(123)
 	console.log('testBranch')
+	console.log('testBranch2-1')
+	console.log('testBranch2-3')
 	var scrollTop ;
 	var storeObject = new Object();
 	var transLocalStorage = localStorage.getItem("transLink")!=null? JSON.parse(localStorage.getItem("transLink")):null;
